# datenschutz-neu-gedacht-comment

./: .gitignore  README.md  pyproject.toml
src/: _quarto.yml  draft_ideas.md  generic.qmd  hello.qmd  index.qmd  references.bib  technical.qmd
