[project]
name = "DatenschutzKommentar"
version = "1.0.0"
description = "Explore new dagster components"
authors = [{ name = "Georg Heiler", email = "heiler@csh.ac.at" }, { name= "Rania Wazir", email = "rania.wazir@vdsg.at"}]
requires-python = ">= 3.13,< 3.14"

[tool.pixi.project]
platforms = ["linux-64", "win-64", "linux-aarch64", "osx-arm64", "win-64",]
channels = ["conda-forge"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.environments]
dev = { features = [
  "data-privacy-comment",
  "notebookdev",
], solve-group = "default" }

[tool.pixi.feature.data-privacy-comment.dependencies]
# we do not need python dependenices from conda (currently)
[tool.pixi.feature.data-privacy-comment.pypi-dependencies]
# all our pip dependencies go here
quarto-cli = ">=1.6.42,<1.8"

# these below are just needed for the dummy example
# I do not know if we actually need anything like that
matplotlib = "~=3.10.1"
plotly ="~=6.0.1"

# data_privacy_comment = { path = ".", editable = true }

[tool.pixi.feature.notebookdev.pypi-dependencies]
jupyterlab = "~=4.4.0"
jupyterlab-git = ">=0.51.0,<0.60"
ipywidgets = "~=8.1.5"

[tool.pixi.tasks]

[tool.pixi.tasks.preview]
cmd = "pixi run -e dev --frozen quarto preview src"
description = "Preview document"


[tool.pixi.tasks.render]
cmd = "pixi run -e dev --frozen quarto render src"
description = "Render"

